#////////////////////////////////////////////////////////////////////
# Copyright (c) 2001-2003 David Pritchard <drpritch@alumni.uwaterloo.ca>
# 
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public License
# as published by the Free Software Foundation; either
# version 2 of the License, or (at your option) any later
# version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
# 
# You should have received a copy of the GNU Lesser General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

include $(top_srcdir)/Makefile.am.include

noinst_LTLIBRARIES = libgeom.la

libgeom_la_SOURCES =                \
    geMatrix3.cpp                   \
    geMatrix4.cpp                   \
    geMesh.cpp                      \
    geMeshBuilder.cpp               \
    geMeshWingedEdge.cpp            \
    gePoint.cpp                     \
    geVector.cpp                    

myincludedir = $(includedir)/freecloth/geom
myinclude_HEADERS =                 \
    geMatrix3.h                     \
    geMatrix3.inline.h              \
    geMatrix4.h                     \
    geMatrix4.inline.h              \
    geMesh.h                        \
    geMesh.inline.h                 \
    geMeshTypes.h                   \
    geMeshBuilder.h                 \
    geMeshWingedEdge.h              \
    geMeshWingedEdge.imp.h          \
    geMeshWingedEdge.inline.h       \
    gePoint.h                       \
    gePoint.inline.h                \
    geVector.h                      \
    geVector.inline.h               \
    package.h                       
